--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'org.json:json:20171018'
     compile 'com.squareup.okio:okio:1.14.0'
     compile 'org.nanohttpd:nanohttpd:2.3.1'
+    compile 'commons-codec:commons-codec:1.11'
 }
 
 shadowJar {
@@ -43,6 +44,7 @@ shadowJar {
         include dependency('org.json:json:20171018')
         include dependency('com.squareup.okio:okio:1.14.0')
         include dependency('org.nanohttpd:nanohttpd:2.3.1')
+        include dependency('commons-codec:commons-codec:1.11')
     }
     classifier = 'full'
 }
