--- a/build.gradle
+++ b/build.gradle
@@ -30,21 +30,25 @@ minecraft {
     mappings = "snapshot_20171003"
 }
 
+def deps = [
+        'com.squareup.okhttp3:okhttp:3.9.1',
+        'org.json:json:20171018',
+        'com.squareup.okio:okio:1.14.0',
+        'org.nanohttpd:nanohttpd:2.3.1',
+//        'commons-codec:commons-codec:1.11',
+] as String[]
+
 dependencies {
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
-    compile 'org.json:json:20171018'
-    compile 'com.squareup.okio:okio:1.14.0'
-    compile 'org.nanohttpd:nanohttpd:2.3.1'
-    compile 'commons-codec:commons-codec:1.11'
+    deps.each{
+        compile it
+    }
 }
 
 shadowJar {
     dependencies {
-        include dependency('com.squareup.okhttp3:okhttp:3.9.1')
-        include dependency('org.json:json:20171018')
-        include dependency('com.squareup.okio:okio:1.14.0')
-        include dependency('org.nanohttpd:nanohttpd:2.3.1')
-        include dependency('commons-codec:commons-codec:1.11')
+        deps.each{
+            include dependency(it)
+        }
     }
     classifier = 'full'
 }
