--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "0.0.1"
+version = "1.0.0"
 group = "network.indexyz.minecraft.coolq"
 archivesBaseName = "coolq-minecraft"
 
@@ -28,6 +28,8 @@ minecraft {
     runDir = "run"
     
     mappings = "snapshot_20171003"
+
+    replace "@version@", project.version
 }
 
 def deps = [
